common-applications/freesky-icsl-hk-cluster/cla-test/backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cla-backend
  name: cla-backend
  namespace: cla-test
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: cla-backend
  template:
    metadata:
      labels:
        component: cla-backend
    spec:
      containers:
        - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/icsl/cla-backend:e4d3c10ce59796217020c6d8301c4532f9ea0bd8
          imagePullPolicy: IfNotPresent
          name: cla-backend-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /opt/app/conf/pdfs/org_signature_pdf
              mkdir -p /opt/app/conf/pdfs/output
              /opt/app/cla-server
          volumeMounts:
            - mountPath: /opt/app/conf/pdfs
              name: data-volume
            - mountPath: /opt/app/conf/platforms/email.yaml
              subPath: email
              name: secret-volume
            - mountPath: /opt/app/conf/platforms/gmail.json
              subPath: gmail
              name: secret-volume
            - mountPath: /opt/app/conf/platforms/code_platforms.yaml
              subPath: code-platforms
              name: secret-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: cla-data-vol
        - name: secret-volume
          secret:
            secretName: cla-secrets
