common-applications/freesky-icsl-hk-cluster/cla-test/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cla-backend-service
  namespace: cla-test
spec:
  ports:
    - name: srv
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: cla-backend
  type: ClusterIP
