common-applications/freesky-icsl-hk-cluster/cla-test/backend/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
  name: cla-ingress-backend
  namespace: cla-test
spec:
  tls:
    - hosts:
        - clasign.test.myopeninfra.com
      secretName: clasign-backend-tls
  rules:
    - host: clasign.test.myopeninfra.com
      http:
        paths:
          - backend:
              serviceName: cla-backend-service
              servicePort: 80
            path: /api(/|$)(.*)
